--- a/index.html
+++ b/index.html
@@ -5,28 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EBAC Bistrô</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <header class="navbar navbar-expand-lg stick-top">
+    <header class="navbar navbar-expand-lg stick-top pt-4 p-4">
         <div class="container">
-            <h1 class="navbar-brand">EBAC Bistrô</h1>
-            <nav>
-                <ul class="nav nav-pills ">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link active">Sobre nós</a>
+            <h1 class="navbar-brand m-0">EBAC Bistrô</h1>
+            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
+                <ul class="nav nav-pills d-block d-md-flex">
+                    <li class="nav-item fw-bold">
+                        <a href="#" class="nav-link active">
+                            <i class="bi bi-house-door me-1"></i> <!--margin-end, quanto maior o número maior a margem, vai até 5-->
+                            Sobre nós
+                        </a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Eventos</a>
+                    <li class="nav-item fw-bold">
+                        <a href="#" class="nav-link">
+                            <i class="bi bi-calendar-check me-1"></i>
+                            Eventos
+                        </a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Cardápio</a>
+                    <li class="nav-item fw-bold">
+                        <a href="#" class="nav-link">
+                            <i class="bi bi-card-text me-1"></i>
+                            Cardápio
+                        </a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Fale conosco</a>
+                    <li class="nav-item fw-bold">
+                        <a href="#" class="nav-link">
+                            <i class="bi bi-chat-left-text me-1"></i>
+                            Fale conosco
+                        </a>
                     </li>
                 </ul>
             </nav>
