--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <header class="navbar navbar-expand-lg stick-top pt-4 p-4">
+    <header class="navbar navbar-expand-lg stick-top pt-4 p-4" id="cabecalho">
         <div class="container">
-            <h1 class="navbar-brand m-0">EBAC Bistrô</h1>
+            <h1 class="navbar-brand m-0 section-title">EBAC Bistrô</h1>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
                 <ul class="nav nav-pills d-block d-md-flex">
                     <li class="nav-item fw-bold">
-                        <a href="#" class="nav-link active">
+                        <a href="#sobre-o-restaurante" class="nav-link">
                             <i class="bi bi-house-door me-1"></i> <!--margin-end, quanto maior o número maior a margem, vai até 5-->
                             Sobre nós
                         </a>
@@ -48,6 +48,59 @@
             </nav>
         </div>
     </header>
+
+    <div data-bs-spy="scroll" data-bs-target="#cabecalho">
+        <section id="sobre-o-restaurante">
+            <div class="carousel slide" data-bs-ride="carousel" id="carousel"> <!--esse data é para ativar o scroll do carousel-->
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="3000"> <!--data bs para informar os milissegundos-->
+                        <img src="images/slides/slide1.png" alt="Foto do espaço interno do restaurante">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="images/slides/slide2.png" alt="Duas taças de vinho">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="images/slides/slide3.png" alt="Mesa com comida">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
+                </div>
+            </div>
+            <div class="pt-5 pb-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <img src="images/restaurante.jpg" class="d-block w-100 rounded" alt="Restaurante, espaço interno">
+                        </div>
+                        <div class="col-md-7">
+                            <h2 class="section-title">Sobre <span>o Restaurante</span></h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex explicabo autem ut a dolore facilis quidem sed libero, ducimus cumque totam quasi veniam veritatis reiciendis magnam et aliquam! Excepturi, tenetur.
+                            </p>
+                            <h3 class="section-title">Sobre <span>o Espaço</span></h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis cum recusandae earum voluptatibus libero soluta, voluptas nobis illum quae similique, dolorum omnis placeat atque. In ab molestiae a harum cumque.
+                            </p>
+                            <ul>
+                                <li>Item 1</li>
+                                <li>Item 2</li>
+                                <li>Item 3</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
