Feat: Adicionando seção Para todas as Ocasiões, de eventos.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li class="nav-item fw-bold">
-                        <a href="#" class="nav-link">
+                        <a href="#eventos" class="nav-link">
                             <i class="bi bi-calendar-check me-1"></i>
                             Eventos
                         </a>
@@ -82,11 +82,11 @@
                             <img src="images/restaurante.jpg" class="d-block w-100 rounded" alt="Restaurante, espaço interno">
                         </div>
                         <div class="col-md-7">
-                            <h2 class="section-title">Sobre <span>o Restaurante</span></h2>
+                            <h2 class="section-title">Sobre <span class="text-colored">o Restaurante</span></h2>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex explicabo autem ut a dolore facilis quidem sed libero, ducimus cumque totam quasi veniam veritatis reiciendis magnam et aliquam! Excepturi, tenetur.
                             </p>
-                            <h3 class="section-title">Sobre <span>o Espaço</span></h3>
+                            <h3 class="section-title">Sobre <span class="text-colored">o Espaço</span></h3>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis cum recusandae earum voluptatibus libero soluta, voluptas nobis illum quae similique, dolorum omnis placeat atque. In ab molestiae a harum cumque.
                             </p>
@@ -96,6 +96,45 @@
                                 <li>Item 3</li>
                             </ul>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="eventos" class="pt-5 pb-5">
+            <div class="container">
+                <div class="row">
+                    <h2 class="section-title text-center">Para todas <span class="text-colored">as ocasiões</span></h2>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-md-4">
+                        <img src="images/eventos/aniversario.jpg" alt="Aniversarios" class="d-block w-100 rounded mb-2">
+                        <h3 class="section-title text-colored fs-4">
+                            <i class="bi bi-calendar-heart-fill"></i>
+                            Aniversários
+                        </h3>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore ducimus sint amet voluptate ipsum doloribus vel qui ullam praesentium aspernatur culpa adipisci eos, sequi, iusto ad magnam voluptatum soluta pariatur!
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="images/eventos/casamento.jpg" alt="Aniversarios" class="d-block w-100 rounded mb-2">
+                        <h3 class="section-title text-colored fs-4">
+                            <i class="bi bi-arrow-through-heart-fill"></i>
+                            Festas de Casamento
+                        </h3>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore ducimus sint amet voluptate ipsum doloribus vel qui ullam praesentium aspernatur culpa adipisci eos, sequi, iusto ad magnam voluptatum soluta pariatur!
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="images/eventos/confraternizacoes.jpg" alt="Aniversarios" class="d-block w-100 rounded mb-2">
+                        <h3 class="section-title text-colored fs-4">
+                            <i class="bi bi-people-fill"></i>
+                            Confraternizações
+                        </h3>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore ducimus sint amet voluptate ipsum doloribus vel qui ullam praesentium aspernatur culpa adipisci eos, sequi, iusto ad magnam voluptatum soluta pariatur!
+                        </p>
                     </div>
                 </div>
             </div>
