Chore: Configurando os índices do menu da seção de Cardápio com navbar.

--- a/index.html
+++ b/index.html
@@ -139,6 +139,28 @@
                 </div>
             </div>
         </section>
+        <setion id="cardapio">
+            <div class="container">
+                <div class="row">
+                    <h2 class="section-title text-center">Nosso <span class="text-colored">cardápio</span></h2>
+                </div>
+                <div class="row">
+                    <aside class="col-md-2">
+                        <nav class="nav nav-pills flex-column nav-cardapio">
+                            <!-- por padrao, os nav-pills deixam os itens um ao lado do outro. com flex-column isso muda.  -->
+                            <button type="button" class="text-start nav-link text-colored active">Bebidas não alcoólicas</button>
+                            <button type="button" class="text-start nav-link text-colored">Bebidas alcoólicas</button>
+                            <button type="button" class="text-start nav-link text-colored">Entradas</button>
+                            <button type="button" class="text-start nav-link text-colored">Pratos Principais</button>
+                            <button type="button" class="text-start nav-link text-colored">Sobremesas</button>
+                        </nav>
+                    </aside>
+                    <div class="col-md-10">
+                        Conteudo do cardapio
+                    </div>
+                </div>
+            </div>
+        </setion>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"></script>
 </body>
