--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </a>
                     </li>
                     <li class="nav-item fw-bold">
-                        <a href="#" class="nav-link">
+                        <a href="#cardapio" class="nav-link">
                             <i class="bi bi-card-text me-1"></i>
                             Cardápio
                         </a>
@@ -139,10 +139,10 @@
                 </div>
             </div>
         </section>
-        <setion id="cardapio">
+        <section id="cardapio" class="pt-5 pb-5">
             <div class="container">
                 <div class="row">
-                    <h2 class="section-title text-center">Nosso <span class="text-colored">cardápio</span></h2>
+                    <h2 class="section-title text-center mb-5">Nosso <span class="text-colored">cardápio</span></h2>
                 </div>
                 <div class="row">
                     <aside class="col-md-2">
@@ -188,7 +188,6 @@
                                         <img class="d-block w-100 rounded" src="images/cardapio/bebidas/suco.jpg" alt="outras">
                                         <h5 class="text-colored fw-bold mt-2">Bebida X</h5>
                                         <p>1L. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                                    </div>
                                     </div>
                                 </div>
                             </div>
@@ -273,7 +272,7 @@
                     </div>
                 </div>
             </div>
-        </setion>
+        </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"></script>
 </body>
